[gd_scene load_steps=3 format=3 uid="uid://dh4khcpxe6ho6"]

[ext_resource type="Script" path="res://addons/resource_manager/ingredient_row.gd" id="1_qdh6a"]
[ext_resource type="Texture2D" uid="uid://dgvnyf5b7lo3r" path="res://addons/resource_manager/icons/trash_icon.png" id="2_mmp0y"]

[node name="IngredientRow" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_qdh6a")

[node name="ImageContainer" type="AspectRatioContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
alignment_horizontal = 0

[node name="ImageLabel" type="TextureRect" parent="ImageContainer"]
layout_mode = 2
stretch_mode = 5

[node name="NameLabel" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Name"

[node name="DescriptionLabel" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.5
text = "Description"

[node name="StackSizeLabel" type="SpinBox" parent="."]
layout_mode = 2
size_flags_horizontal = 3
update_on_text_changed = true

[node name="EffectLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Effects"

[node name="DeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
icon = ExtResource("2_mmp0y")
expand_icon = true

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Delete Confirmation"
ok_button_text = "Delete"
dialog_text = "Are you sure you want to delete this ingredient?"
dialog_autowrap = true

[connection signal="text_changed" from="NameLabel" to="." method="_on_name_changed"]
[connection signal="text_changed" from="DescriptionLabel" to="." method="_on_description_changed"]
[connection signal="value_changed" from="StackSizeLabel" to="." method="_on_stack_size_changed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="confirmed" from="DeleteConfirmationDialog" to="." method="_on_delete_confirmed"]
